02_Firmware/02_STM32/.metadata/.plugins/org.eclipse.cdt.ui/qspi_test.build.log
19:48:24 **** Incremental Build of configuration Debug for project qspi_test ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32H7A3xx -c -I../Core/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:99:3: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
   99 |   printf("Hello world!!!\r\n");
      |   ^~~~~~
../Core/Src/main.c:24:1: note: include '<stdio.h>' or provide a declaration of 'printf'
   23 | #include "gpio.h"
  +++ |+#include <stdio.h>
   24 | 
../Core/Src/main.c:99:3: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   99 |   printf("Hello world!!!\r\n");
      |   ^~~~~~
../Core/Src/main.c:99:3: note: include '<stdio.h>' or provide a declaration of 'printf'
../Core/Src/main.c:106:25: error: incompatible type for argument 1 of 'HAL_OSPI_MemoryMapped'
  106 |   HAL_OSPI_MemoryMapped(hospi1, pcfg);
      |                         ^~~~~~
      |                         |
      |                         OSPI_HandleTypeDef
In file included from ../Core/Inc/stm32h7xx_hal_conf.h:403,
                 from ../Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32H7xx_HAL_Driver/Inc/stm32h7xx_hal_ospi.h:828:65: note: expected 'OSPI_HandleTypeDef *' but argument is of type 'OSPI_HandleTypeDef'
  828 | HAL_StatusTypeDef     HAL_OSPI_MemoryMapped(OSPI_HandleTypeDef *hospi, OSPI_MemoryMappedTypeDef *cfg);
      |                                             ~~~~~~~~~~~~~~~~~~~~^~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

19:48:25 Build Failed. 2 errors, 2 warnings. (took 469ms)

